Refactor Services code